container_builder/tmp/V7Tr3MGmDn/svn_checkout/.svn/pristine/91/91c19a3f33ab03f0c98eb68d1d6e8b0ad935381d.svn-base
<?xml version="1.0" ?>
<testsuite errors="1" failures="0" name="unittest.loader.ModuleImportFailure-20170928053719" tests="1" time="0.000">
	<testcase classname="unittest.loader.ModuleImportFailure" name="test" time="0.000">
		<error message="Failed to import test module: test
Traceback (most recent call last):
  File &quot;/usr/local/lib/python2.7/unittest/loader.py&quot;, line 254, in _find_tests
    module = self._get_module_from_name(name)
  File &quot;/usr/local/lib/python2.7/unittest/loader.py&quot;, line 232, in _get_module_from_name
    __import__(name)
  File &quot;/shared/test.py&quot;, line 343
    class TestCase0(SeleniumBrowserTestCase):
        ^
IndentationError: expected an indented block
" type="ImportError">
<![CDATA[ImportError: Failed to import test module: test
Traceback (most recent call last):
  File "/usr/local/lib/python2.7/unittest/loader.py", line 254, in _find_tests
    module = self._get_module_from_name(name)
  File "/usr/local/lib/python2.7/unittest/loader.py", line 232, in _get_module_from_name
    __import__(name)
  File "/shared/test.py", line 343
    class TestCase0(SeleniumBrowserTestCase):
        ^
IndentationError: expected an indented block

]]>		</error>
	</testcase>
	<system-out>
<![CDATA[]]>	</system-out>
	<system-err>
<![CDATA[]]>	</system-err>
</testsuite>
